3.4.3/_sources/gallery/text_labels_and_annotations/label_subplots.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/text_labels_and_annotations/label_subplots.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_text_labels_and_annotations_label_subplots.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_text_labels_and_annotations_label_subplots.py:


==================
Labelling subplots
==================

Labelling subplots is relatively straightforward, and varies,
so Matplotlib does not have a general method for doing this.

Simplest is putting the label inside the axes.  Note, here
we use `.pyplot.subplot_mosaic`, and use the subplot labels
as keys for the subplots, which is a nice convenience.  However,
the same method works with `.pyplot.subplots` or keys that are
different than what you want to label the subplot with.

.. GENERATED FROM PYTHON SOURCE LINES 15-31

.. code-block:: default


    import matplotlib.pyplot as plt
    import matplotlib.transforms as mtransforms

    fig, axs = plt.subplot_mosaic([['a)', 'c)'], ['b)', 'c)'], ['d)', 'd)']],
                                  constrained_layout=True)

    for label, ax in axs.items():
        # label physical distance in and down:
        trans = mtransforms.ScaledTranslation(10/72, -5/72, fig.dpi_scale_trans)
        ax.text(0.0, 1.0, label, transform=ax.transAxes + trans,
                fontsize='medium', verticalalignment='top', fontfamily='serif',
                bbox=dict(facecolor='0.7', edgecolor='none', pad=3.0))

    plt.show()




.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_label_subplots_001.png
    :alt: label subplots
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 32-34

We may prefer the labels outside the axes, but still aligned
with each other, in which case we use a slightly different transform:

.. GENERATED FROM PYTHON SOURCE LINES 34-46

.. code-block:: default


    fig, axs = plt.subplot_mosaic([['a)', 'c)'], ['b)', 'c)'], ['d)', 'd)']],
                                  constrained_layout=True)

    for label, ax in axs.items():
        # label physical distance to the left and up:
        trans = mtransforms.ScaledTranslation(-20/72, 7/72, fig.dpi_scale_trans)
        ax.text(0.0, 1.0, label, transform=ax.transAxes + trans,
                fontsize='medium', va='bottom', fontfamily='serif')

    plt.show()




.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_label_subplots_002.png
    :alt: label subplots
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 47-49

If we want it aligned with the title, either incorporate in the title or
use the *loc* keyword argument:

.. GENERATED FROM PYTHON SOURCE LINES 49-59

.. code-block:: default


    fig, axs = plt.subplot_mosaic([['a)', 'c)'], ['b)', 'c)'], ['d)', 'd)']],
                                  constrained_layout=True)

    for label, ax in axs.items():
        ax.set_title('Normal Title', fontstyle='italic')
        ax.set_title(label, fontfamily='serif', loc='left', fontsize='medium')

    plt.show()




.. image:: /gallery/text_labels_and_annotations/images/sphx_glr_label_subplots_003.png
    :alt: a), Normal Title, c), Normal Title, b), Normal Title, d), Normal Title
    :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 60-70

.. admonition:: References

   The use of the following functions, methods, classes and modules is shown
   in this example:

   - `matplotlib.figure.Figure.subplot_mosaic` /
     `matplotlib.pyplot.subplot_mosaic`
   - `matplotlib.axes.Axes.set_title`
   - `matplotlib.axes.Axes.text`
   - `matplotlib.transforms.ScaledTranslation`


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.026 seconds)


.. _sphx_glr_download_gallery_text_labels_and_annotations_label_subplots.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: label_subplots.py <label_subplots.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: label_subplots.ipynb <label_subplots.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    Keywords: matplotlib code example, codex, python plot, pyplot
    `Gallery generated by Sphinx-Gallery
    <https://sphinx-gallery.readthedocs.io>`_
